Fix banner / header spacing

--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -28,24 +28,35 @@ $govuk-canvas-background-colour: $govuk-body-background-colour;
 	color: #0b0c0c;
 }
 
-#brc-header {
-  background-color: #ffffff; 
-  border: 0px 0px 0px 0px; 
-  padding-bottom: 10px;
-}
-
-#status-banner {
-  background-color: #f3f2f1; 
-  border: 0px 0px 0px 0px; 
-}
-
-#status-banner p {
-  margin-bottom: 10px;
-}
-
 #header-link a:hover {
 	text-decoration: underline;
 	color: #0b0c0c;
+}
+
+#brc-header {
+  background-color: #ffffff; 
+  border-bottom: solid 0px white; 
+  padding-bottom: 10px;
+}
+
+#home-banner {
+  background-color: #0b0c0c; 
+  border-bottom: solid 0px white; 
+}
+
+#status-banner {
+  background: #f3f2f1;
+  padding-bottom: 10px;
+  border: solid 0px #fff;
+}
+
+#banner-contetainer {
+  border: solid 0px #fff;
+  margin-bottom: 0px;
+}
+
+#status-banner p {
+  margin-bottom: 0px;
 }
 
 #footer-link a {
